fix: move pagination to backend