@@ -63,7 +63,7 @@ public class BasicSearchService implements SearchService {
     @Override
     @Transactional
     public List<SearchResponse> search(SearchRequest searchRequest, int page, int size) throws Exception {
-        List<SearchResponse> searchResponses = new ArrayList<>();
+        List<SearchResponse> searchResponses;
         page--;
 
         int totalSize;
@@ -71,6 +71,7 @@ public class BasicSearchService implements SearchService {
         int endIndex = startIndex + size;
 
         if (searchRequest.getQuery() == null || searchRequest.getQuery().trim().isEmpty()) {
+
             SearchQuery query = SearchQuery.builder()
                     .minPrice(searchRequest.getMinPrice())
                     .maxPrice(searchRequest.getMaxPrice())
@@ -80,77 +81,64 @@ public class BasicSearchService implements SearchService {
                     .offset(startIndex)
                     .size(size)
                     .build();
+
             List<AptInfo> aptInfos = searchRepository.filterBySearchQuery(query);
 
-            searchResponses = aptInfos.stream()
-                    .map(
-                            aptInfo -> new SearchResponse(
-                                    SimilarityScore.NONE,
-                                    aptInfo,
-                                    likeService.viewLike(aptInfo.getAptSeq()),
-                                    aptInfos.size()
-                            )
-                    )
+            endIndex = Math.min(endIndex, aptInfos.size());
+
+            searchResponses = aptInfos.subList(startIndex, endIndex).stream()
+                    .map(aptInfo -> new SearchResponse(
+                            SimilarityScore.NONE,
+                            aptInfo,
+                            likeService.viewLike(aptInfo.getAptSeq()),
+                            aptInfos.size()
+                    ))
                     .toList();
 
         } else {
+
             List<RecommendResponse> recommendResponses = recClient.getRecommendation(searchRequest.getQuery(), TOP_K).stream()
                     .filter(distinctByKey(RecommendResponse::getDanjiId))
                     .toList();
 
-            Map<Long, RecommendResponse> recommendResponseMap = recommendResponses.stream()
-                    .collect(Collectors.toMap(RecommendResponse::getDanjiId, Function.identity()));
+            List<AddressMappingResponse> mappings = addressRepository.selectAddressMappingByDanjiIdList(
+                    recommendResponses.stream()
+                            .map(RecommendResponse::getDanjiId)
+                            .toList()
+            );
 
-            List<Long> danjiIds = new ArrayList<>(recommendResponseMap.keySet());
-
-            List<AddressMappingResponse> mappings = addressRepository.selectAddressMappingByDanjiIdList(danjiIds);
-
-            Map<String, List<Long>> aptSeqToDanjiIdsMap = mappings.stream()
+            Map<String, Float> similarityMap = mappings.stream()
                     .filter(Objects::nonNull)
                     .collect(Collectors.toMap(
                             AddressMappingResponse::getAptSeq,
-                            mapping -> new ArrayList<>(List.of(mapping.getDanjiId())),
-                            (existing, replacement) -> {
-                                existing.addAll(replacement);
-                                return existing;
-                            }
+                            mapping -> recommendResponses.stream()
+                                    .filter(response -> mapping.getDanjiId().equals(response.getDanjiId()))
+                                    .findFirst()
+                                    .map(RecommendResponse::getSimilarity)
+                                    .orElse(0.0f),
+                            (existing, replacement) -> existing // Resolve conflicts
                     ));
 
-            Map<String, Float> similarityMap = aptSeqToDanjiIdsMap.entrySet().stream()
-                    .collect(Collectors.toMap(
-                            Map.Entry::getKey,
-                            entry -> {
-                                List<Long> danjiIdList = entry.getValue();
-                                return danjiIdList.stream()
-                                        .map(danjiId -> recommendResponses.stream()
-                                                .filter(response -> response.getDanjiId().equals(danjiId))
-                                                .findFirst()
-                                                .map(RecommendResponse::getSimilarity)
-                                                .orElse(0.0f))
-                                        .max(Float::compare)
-                                        .orElse(0.0f);
-                            }
-                    ));
-
-            List<String> aptSeqList = mappings.stream()
-                    .map(AddressMappingResponse::getAptSeq)
-                    .collect(Collectors.toList());
-
-            SearchQuery query = SearchQuery.builder()
-                    .aptSeqList(aptSeqList)
+            List<AptInfo> aptInfos = searchRepository.filterBySearchQuery(SearchQuery.builder()
+                    .aptSeqList(mappings.stream().map(AddressMappingResponse::getAptSeq).toList())
                     .minPrice(searchRequest.getMinPrice())
                     .maxPrice(searchRequest.getMaxPrice())
                     .locationFilter(searchRequest.getLocationFilter())
                     .minArea(searchRequest.getMinArea())
                     .maxArea(searchRequest.getMaxArea())
-                    .build();
-            List<AptInfo> aptInfos = searchRepository.filterBySearchQuery(query)
-                        .stream()
-                        .sorted(Comparator.comparingDouble(aptInfo -> -similarityMap.get(aptInfo.getAptSeq())))
-                        .toList();
+                    .build());
 
-            totalSize = searchRepository.selectCountBySearchQuery(query);
-            searchResponses = aptInfos.stream()
+            aptInfos = aptInfos.stream()
+                    .sorted((aptInfo1, aptInfo2) -> Float.compare(
+                            similarityMap.getOrDefault(aptInfo2.getAptSeq(), 0.0f),
+                            similarityMap.getOrDefault(aptInfo1.getAptSeq(), 0.0f)
+                    ))
+                    .toList();
+
+            totalSize = aptInfos.size();
+            endIndex = Math.min(endIndex, totalSize);
+
+            searchResponses = aptInfos.subList(startIndex, endIndex).stream()
                     .map(aptInfo -> {
                         float similarityScore = similarityMap.getOrDefault(aptInfo.getAptSeq(), 0.0f);
                         SimilarityScore similarity = SimilarityScore.classify(similarityScore);
@@ -164,15 +152,9 @@ public class BasicSearchService implements SearchService {
                     .toList();
 
             trackSearchHistory(searchRequest);
-
         }
 
-        if (startIndex >= searchResponses.size()) {
-            return Collections.emptyList();
-        }
-
-        endIndex = Math.min(endIndex, searchResponses.size());
-        return searchResponses.subList(startIndex, endIndex);
+        return searchResponses;
     }
 
 
